# aquarium

./: .gitmodules
aquarium-freertos/: CMakeLists.txt
aquarium-freertos/include/: lcd_display.h  log.h  lwipopts.h  pin_map.h  temperature_control.h  water_level_control.h
aquarium-freertos/lib/onewire_library/: CMakeLists.txt
aquarium-freertos/src/: CMakeLists.txt  http_client_util.c  lcd_display.c  main.c  main.cpp  temperature_control.c  water_level_control.c
